<resources>
    <string name="app_name">Giveaway Hub</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">850138041716448</string>
    <string name="backHome">Home</string>
    <string name="clearResults">Clear Results</string>
    <string name="confirmDonation">Confirm Donation</string>
    <string name="distance">Distance</string>
    <string name="filters">Filters</string>
    <string name="itemLocation">Item location</string>
    <string name="itemName">Item name</string>
    <string name="login">Please Login</string>
    <string name="newItem">Add new Item</string>
    <string name="newProducts">New Products</string>
    <string name="otherItems">Receive other items</string>
    <string name="parseClass">TestObject7</string>
    <string name="recent">Recent</string>
    <string name="statusNew">New</string>
    <string name="statusText">Status of item</string>
    <string name="statusUsed">Used</string>
    <string name="takePicture">Take a picture</string>
</resources>
